k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oip
  labels:
    app.kubernetes.io/part-of: pinquark
    environment: uat
